--- a/index.html
+++ b/index.html
@@ -51,21 +51,18 @@
         <div class="hero__content">
           <div class="hero__badge">🇪🇺 Plataforma Europeia · Grupo Inaugural</div>
           <h1 class="hero__headline">
-            Acesse o iPhone&nbsp;17&nbsp;Pro&nbsp;Max<br />
-            <span class="text-teal">sem depender de banco.</span>
+            A forma mais inteligente de aceder ao <br /><span class="text-teal">iPhone 17 Pro Max na Europa.</span>
           </h1>
           <p class="hero__subheadline">
-            Junte-se ao primeiro grupo de aquisição coletiva WEKOTA e garanta o seu iPhone 17 Pro Max 256GB (Laranja)
-            com parcelas mensais fixas e total transparência.
+            Adira ao primeiro grupo coletivo WEKOTA e garanta o seu iPhone 17 Pro Max 256GB (Laranja) — com pagamentos
+            mensais fixos e total transparência.
           </p>
-          <div class="hero__actions">
-            <a href="#reservar" class="btn btn--primary" id="hero-cta-primary">Entrar na Lista Prioritária</a>
-            <a href="#como-funciona" class="btn btn--outline" id="hero-cta-secondary">Como funciona</a>
+          <div class="hero__emphasis">
+            Portugal 🇵🇹 | Espanha 🇪🇸<br>
+            Sem banca. Sem juros. Apenas estrutura.
           </div>
-          <div class="hero__trust">
-            <span class="trust-item">✔&nbsp; Sem histórico de crédito local</span>
-            <span class="trust-item">✔&nbsp; Custo fixo e transparente</span>
-            <span class="trust-item">✔&nbsp; 100% europeu</span>
+          <div class="hero__actions">
+            <a href="#reservar" class="btn btn--primary btn--lg" id="hero-cta-primary">ENTRAR NA LISTA PRIORITÁRIA</a>
           </div>
         </div>
         <div class="hero__visual" aria-hidden="true">
@@ -87,6 +84,15 @@
       </div>
     </section>
 
+    <!-- URGENCY BAR -->
+    <section class="urgency-bar">
+      <div class="container urgency-bar__inner">
+        <div class="urgency-item"><span class="check">✔</span> Primeiro grupo WEKOTA abre em breve</div>
+        <div class="urgency-item"><span class="check">✔</span> Limitado a 10 participantes confirmados</div>
+        <div class="urgency-item"><span class="check">✔</span> Lista prioritária a encher rapidamente</div>
+      </div>
+    </section>
+
     <!-- HOW IT WORKS -->
     <section class="section section--light" id="como-funciona">
       <div class="container">
@@ -97,29 +103,45 @@
         </div>
         <div class="steps">
           <div class="step">
-            <div class="step__number">01</div>
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+              </svg>
+            </div>
             <div class="step__content">
-              <h3 class="step__title">Escolha e garanta a sua posição</h3>
-              <p class="step__desc">Selecione o produto e confirme a sua posição no grupo coletivo com total clareza
-                sobre os termos e o seu lugar na fila.</p>
+              <h3 class="step__title">Garanta a sua posição</h3>
+              <p class="step__desc">Inscrição simples para entrar na lista prioritária do grupo inaugural.</p>
             </div>
           </div>
           <div class="step__divider" aria-hidden="true"></div>
           <div class="step">
-            <div class="step__number">02</div>
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                <circle cx="9" cy="7" r="4" />
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
+                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+              </svg>
+            </div>
             <div class="step__content">
-              <h3 class="step__title">Participe do grupo estruturado</h3>
-              <p class="step__desc">Integre um grupo com ordem definida contratualmente. Cada participante sabe
-                exatamente quando receberá o seu produto.</p>
+              <h3 class="step__title">Grupo coletivo estruturado</h3>
+              <p class="step__desc">Participe de um grupo de 12 meses planeado e organizado contratualmente.</p>
             </div>
           </div>
           <div class="step__divider" aria-hidden="true"></div>
           <div class="step">
-            <div class="step__number">03</div>
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
+                <line x1="12" y1="18" x2="12.01" y2="18" />
+              </svg>
+            </div>
             <div class="step__content">
-              <h3 class="step__title">Receba o seu iPhone</h3>
-              <p class="step__desc">Na data correspondente à sua posição contratual, o iPhone 17 Pro Max é entregue
-                diretamente a si — sem surpresas.</p>
+              <h3 class="step__title">Receba conforme o contrato</h3>
+              <p class="step__desc">O seu iPhone é entregue seguindo rigorosamente a ordem definida.</p>
             </div>
           </div>
         </div>
@@ -197,34 +219,66 @@
         </div>
         <div class="why-grid">
           <div class="why-card">
-            <div class="why-card__icon">🏛️</div>
-            <h3 class="why-card__title">Modelo de aquisição coletiva estruturada</h3>
-            <p class="why-card__desc">Um sistema organizado e contratual que distribui o acesso a produtos premium de
-              forma justa e previsível.</p>
+            <div class="why-card__icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                <circle cx="9" cy="7" r="4" />
+                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
+                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+              </svg>
+            </div>
+            <h3 class="why-card__title">Modelo coletivo estruturado</h3>
+            <p class="why-card__desc">Um sistema organizado que permite o acesso a produtos premium de forma justa e
+              previsível para todos.</p>
           </div>
           <div class="why-card">
-            <div class="why-card__icon">🔍</div>
-            <h3 class="why-card__title">Estrutura de custos totalmente transparente</h3>
-            <p class="why-card__desc">Sem letras miúdas. Sem surpresas. Cada cêntimo é explicado antes de qualquer
-              compromisso.</p>
+            <div class="why-card__icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10" />
+                <line x1="12" y1="16" x2="12" y2="12" />
+                <line x1="12" y1="8" x2="12.01" y2="8" />
+              </svg>
+            </div>
+            <h3 class="why-card__title">Custo totalmente transparente</h3>
+            <p class="why-card__desc">Sem taxas escondidas. Cada valor é detalhado no contrato para sua total segurança
+              e clareza.</p>
           </div>
           <div class="why-card">
-            <div class="why-card__icon">🇪🇺</div>
+            <div class="why-card__icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+                <polyline points="9 22 9 12 15 12 15 22" />
+              </svg>
+            </div>
             <h3 class="why-card__title">Empresa com sede na Europa</h3>
-            <p class="why-card__desc">Operamos sob regulamentação europeia, com total conformidade legal e proteção ao
-              participante.</p>
+            <p class="why-card__desc">Operamos sob a jurisdição e regulamentação europeia, garantindo o máximo rigor e
+              profissionalismo.</p>
           </div>
           <div class="why-card">
-            <div class="why-card__icon">🛡️</div>
+            <div class="why-card__icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
+                <path d="M7 11V7a5 5 0 0 1 10 0v4" />
+              </svg>
+            </div>
             <h3 class="why-card__title">Sistema de pagamento seguro</h3>
-            <p class="why-card__desc">Infraestrutura financeira robusta que garante que cada contribuição é processada
-              com segurança.</p>
+            <p class="why-card__desc">Processamento de pagamentos através de canais seguros e encriptados para sua total
+              tranquilidade.</p>
           </div>
           <div class="why-card">
-            <div class="why-card__icon">📱</div>
-            <h3 class="why-card__title">Tecnologia de proteção do dispositivo</h3>
-            <p class="why-card__desc">Cada produto entregue conta com rastreamento e proteção tecnológica para maior
-              confiança.</p>
+            <div class="why-card__icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+              </svg>
+            </div>
+            <h3 class="why-card__title">Proteção do dispositivo</h3>
+            <p class="why-card__desc">Contamos com tecnologia de proteção e rastreamento para garantir a integridade do
+              modelo de acesso.</p>
           </div>
           <div class="why-card why-card--accent">
             <p class="why-card__quote">"Juntos, acessamos o que individualmente seria impossível."</p>
@@ -278,18 +332,34 @@
           <h2 class="limited__title">Posições limitadas disponíveis.</h2>
           <p class="limited__subtitle">O grupo será aberto somente quando os primeiros <strong>10 participantes
               qualificados</strong> confirmarem a sua posição. Não perca o seu lugar.</p>
+
+          <form class="lead-form" id="lead-form">
+            <div class="form-grid">
+              <div class="form-group">
+                <input type="text" name="name" id="name" placeholder="Nome Completo" required class="form-input">
+              </div>
+              <div class="form-group">
+                <input type="tel" name="whatsapp" id="whatsapp" placeholder="WhatsApp (+ Código País)" required
+                  class="form-input">
+              </div>
+              <div class="form-group">
+                <select name="country" id="country" required class="form-input">
+                  <option value="" disabled selected>País de Residência</option>
+                  <option value="Portugal">Portugal 🇵🇹</option>
+                  <option value="Espanha">Espanha 🇪🇸</option>
+                </select>
+              </div>
+            </div>
+            <button type="submit" class="btn btn--teal btn--lg btn--full">RESERVAR A MINHA POSIÇÃO</button>
+            <p class="form-privacy">Sua informação é confidencial e usada apenas para o contactar sobre a WEKOTA.</p>
+          </form>
+
           <div class="limited__counter">
             <div class="counter__bar">
               <div class="counter__fill" style="width: 60%"></div>
             </div>
             <p class="counter__label">6 de 10 vagas confirmadas</p>
           </div>
-          <a href="https://wa.me/351000000000?text=Olá!%20Quero%20reservar%20minha%20posição%20no%20grupo%20WEKOTA%20para%20o%20iPhone%2017%20Pro%20Max."
-            class="btn btn--white btn--lg" id="reserve-cta" target="_blank" rel="noopener noreferrer">
-            Reservar a Minha Posição
-          </a>
-          <p class="limited__disclaimer">A reserva não implica compromisso financeiro imediato. Os nossos especialistas
-            entrarão em contacto para apresentar todos os detalhes do grupo.</p>
         </div>
       </div>
     </section>
@@ -335,21 +405,18 @@
     </div>
   </footer>
 
+  <!-- FLOATING WHATSAPP BUTTON -->
   <a href="https://wa.me/351000000000?text=Olá!%20Tenho%20interesse%20no%20grupo%20WEKOTA%20para%20o%20iPhone%2017%20Pro%20Max."
-    class="whatsapp-fab" id="whatsapp-fab" target="_blank" rel="noopener noreferrer"
-    aria-label="Fale connosco pelo WhatsApp">
-    <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+    class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+    <svg viewBox="0 0 24 24" fill="currentColor">
       <path
         d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 0 1-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 0 1-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 0 1 2.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0 0 12.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 0 0 5.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 0 0-3.48-8.413Z" />
     </svg>
-    <span class="whatsapp-fab__text">WhatsApp</span>
+    <div class="whatsapp-float__tooltip">Chat with WEKOTA</div>
   </a>
 
   <div class="mobile-sticky-cta" id="mobile-sticky-cta">
-    <a href="https://wa.me/351000000000?text=Olá!%20Quero%20reservar%20minha%20posição%20no%20grupo%20WEKOTA."
-      class="btn btn--primary btn--full" id="mobile-sticky-btn" target="_blank" rel="noopener noreferrer">
-      Reservar Minha Posição
-    </a>
+    <a href="#reservar" class="btn btn--teal btn--full">RESERVAR MINHA POSIÇÃO</a>
   </div>
 
   <script type="module" src="./main.js"></script>
