style: premium visual redesign with better rhythm and product focus

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </header>
 
   <main>
-    <!-- HERO SECTION -->
-    <section class="hero" id="inicio">
+    <!-- HERO SECTION (WHITE) -->
+    <section class="hero section--white" id="inicio">
       <div class="container hero__inner">
         <div class="hero__content">
           <div class="hero__badge">🇪🇺 Plataforma Europeia · Grupo Inaugural</div>
@@ -54,8 +54,8 @@
             A forma mais inteligente de aceder ao <br /><span class="text-teal">iPhone 17 Pro Max na Europa.</span>
           </h1>
           <p class="hero__subheadline">
-            Adira ao primeiro grupo coletivo WEKOTA e garanta o seu iPhone 17 Pro Max 256GB (Laranja) — com pagamentos
-            mensais fixos e total transparência.
+            Adira ao primeiro grupo coletivo WEKOTA e garanta o seu iPhone 17 Pro Max 256GB (Laranja) sem burocracia
+            bancária.
           </p>
           <div class="hero__emphasis">
             Portugal 🇵🇹 | Espanha 🇪🇸<br>
@@ -78,13 +78,12 @@
                 <div class="phone-mockup__lens phone-mockup__lens--lidar"></div>
               </div>
             </div>
-            <div class="phone-mockup__glow"></div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- URGENCY BAR -->
+    <!-- URGENCY BAR (LIGHT) -->
     <section class="urgency-bar">
       <div class="container urgency-bar__inner">
         <div class="urgency-item"><span class="check">✔</span> Primeiro grupo WEKOTA abre em breve</div>
@@ -93,129 +92,23 @@
       </div>
     </section>
 
-    <!-- HOW IT WORKS -->
-    <section class="section section--light" id="como-funciona">
-      <div class="container">
-        <div class="section-header">
-          <div class="section-tag">Processo</div>
-          <h2 class="section-title">Como funciona em 3 passos</h2>
-          <p class="section-subtitle">Simples, estruturado e totalmente transparente desde o início.</p>
+    <!-- LARGE PRODUCT SECTION 1 (WHITE) -->
+    <section class="section section--white product-reveal">
+      <div class="container text-center">
+        <div class="product-reveal__visual">
+          <div class="product-reveal__visual-inner"></div>
         </div>
-        <div class="steps">
-          <div class="step">
-            <div class="step__icon">
-              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-              </svg>
-            </div>
-            <div class="step__content">
-              <h3 class="step__title">Garanta a sua posição</h3>
-              <p class="step__desc">Inscrição simples para entrar na lista prioritária do grupo inaugural.</p>
-            </div>
-          </div>
-          <div class="step__divider" aria-hidden="true"></div>
-          <div class="step">
-            <div class="step__icon">
-              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                <circle cx="9" cy="7" r="4" />
-                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
-                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-              </svg>
-            </div>
-            <div class="step__content">
-              <h3 class="step__title">Grupo coletivo estruturado</h3>
-              <p class="step__desc">Participe de um grupo de 12 meses planeado e organizado contratualmente.</p>
-            </div>
-          </div>
-          <div class="step__divider" aria-hidden="true"></div>
-          <div class="step">
-            <div class="step__icon">
-              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
-                <line x1="12" y1="18" x2="12.01" y2="18" />
-              </svg>
-            </div>
-            <div class="step__content">
-              <h3 class="step__title">Receba conforme o contrato</h3>
-              <p class="step__desc">O seu iPhone é entregue seguindo rigorosamente a ordem definida.</p>
-            </div>
-          </div>
-        </div>
+        <h2 class="section-title">iPhone 17 Pro Max 256GB — Orange.</h2>
+        <p class="section-subtitle">O equilíbrio perfeito entre design e performance absoluta.</p>
       </div>
     </section>
 
-    <!-- PRODUCT SECTION -->
-    <section class="section" id="produto">
-      <div class="container">
-        <div class="product-grid">
-          <div class="product__info">
-            <div class="section-tag">Produto do Grupo Inaugural</div>
-            <h2 class="section-title">iPhone 17 Pro Max<br /><span class="text-teal">256GB – Laranja</span></h2>
-            <p class="product__desc">Performance premium. Cor exclusiva. Alto valor de revenda. O produto ideal para o
-              primeiro grupo WEKOTA.</p>
-            <ul class="product__specs">
-              <li class="spec-item">
-                <span class="spec-item__icon">📅</span>
-                <div>
-                  <strong>Duração do grupo</strong>
-                  <span>12 meses</span>
-                </div>
-              </li>
-              <li class="spec-item">
-                <span class="spec-item__icon">💳</span>
-                <div>
-                  <strong>Parcela mensal</strong>
-                  <span>Fixa e transparente. Sem juros ocultos.</span>
-                </div>
-              </li>
-              <li class="spec-item">
-                <span class="spec-item__icon">🔒</span>
-                <div>
-                  <strong>Sem taxas escondidas</strong>
-                  <span>O valor que vê é o valor que paga.</span>
-                </div>
-              </li>
-              <li class="spec-item">
-                <span class="spec-item__icon">📦</span>
-                <div>
-                  <strong>Entrega garantida</strong>
-                  <span>Conforme a sua posição contratual.</span>
-                </div>
-              </li>
-            </ul>
-            <a href="#reservar" class="btn btn--primary" id="product-cta">Garantir minha posição</a>
-          </div>
-          <div class="product__visual-wrap" aria-hidden="true">
-            <div class="product__visual">
-              <div class="iphone-card">
-                <div class="iphone-card__body">
-                  <div class="iphone-card__camera-cluster">
-                    <div class="iphone-card__lens lg"></div>
-                    <div class="iphone-card__lens md"></div>
-                    <div class="iphone-card__lens sm"></div>
-                  </div>
-                </div>
-                <div class="iphone-card__label">
-                  <span>iPhone 17 Pro Max</span>
-                  <span class="iphone-card__color">Laranja</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- WHY WEKOTA -->
-    <section class="section section--light" id="por-que-wekota">
+    <!-- WHY WEKOTA (NAVY) -->
+    <section class="section section--navy" id="por-que-wekota">
       <div class="container">
         <div class="section-header">
-          <div class="section-tag">Por que WEKOTA</div>
-          <h2 class="section-title">Uma plataforma construída<br />para quem foi ignorado pelos bancos.</h2>
+          <div class="section-tag">Diferenciais</div>
+          <h2 class="section-title">Feito para quem valoriza a estrutura.</h2>
         </div>
         <div class="why-grid">
           <div class="why-card">
@@ -229,8 +122,8 @@
               </svg>
             </div>
             <h3 class="why-card__title">Modelo coletivo estruturado</h3>
-            <p class="why-card__desc">Um sistema organizado que permite o acesso a produtos premium de forma justa e
-              previsível para todos.</p>
+            <p class="why-card__desc">Acesso justo e previsível a tecnologia premium através de um sistema organizado.
+            </p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
@@ -242,20 +135,18 @@
               </svg>
             </div>
             <h3 class="why-card__title">Custo totalmente transparente</h3>
-            <p class="why-card__desc">Sem taxas escondidas. Cada valor é detalhado no contrato para sua total segurança
-              e clareza.</p>
+            <p class="why-card__desc">Sem taxas escondidas. Cada valor é detalhado no contrato para sua total segurança.
+            </p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
                 stroke-linecap="round" stroke-linejoin="round">
-                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
-                <polyline points="9 22 9 12 15 12 15 22" />
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
               </svg>
             </div>
-            <h3 class="why-card__title">Empresa com sede na Europa</h3>
-            <p class="why-card__desc">Operamos sob a jurisdição e regulamentação europeia, garantindo o máximo rigor e
-              profissionalismo.</p>
+            <h3 class="why-card__title">Garantia Europeia</h3>
+            <p class="why-card__desc">Operamos sob jurisdição europeia com máximo rigor e proteção ao participante.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
@@ -282,6 +173,95 @@
           </div>
           <div class="why-card why-card--accent">
             <p class="why-card__quote">"Juntos, acessamos o que individualmente seria impossível."</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- DETAIL PRODUCT SECTION 2 (WHITE) -->
+    <section class="section section--white">
+      <div class="container">
+        <div class="detail-grid">
+          <div class="detail-grid__visual">
+            <div class="detail-img-mockup">
+              <div class="iphone-card__camera-cluster">
+                <div class="iphone-card__lens lg"></div>
+                <div class="iphone-card__lens md"></div>
+                <div class="iphone-card__lens sm"></div>
+              </div>
+            </div>
+          </div>
+          <div class="detail-grid__content">
+            <div class="section-tag">Excelência</div>
+            <h2 class="section-title">Performance Premium.<br>Cor Exclusiva.</h2>
+            <p class="section-subtitle">O iPhone 17 Pro Max entrega alto valor de revenda e tecnologia de ponta.</p>
+            <a href="#reservar" class="btn btn--primary">GARANTIR MINHA POSIÇÃO</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOW IT WORKS (LIGHT) -->
+    <section class="section section--light" id="como-funciona">
+      <div class="container">
+        <div class="section-header">
+          <div class="section-tag">Processo</div>
+          <h2 class="section-title">Como funciona em 3 passos</h2>
+        </div>
+        <div class="steps">
+          <div class="step">
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+              </svg>
+            </div>
+            <div class="step__content">
+              <h3 class="step__title">Garanta sua posição</h3>
+              <p class="step__desc">Inscrição simples para a lista prioritária do grupo inaugural.</p>
+            </div>
+          </div>
+          <div class="step__divider" aria-hidden="true"></div>
+          <div class="step">
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                <circle cx="9" cy="7" r="4" />
+              </svg>
+            </div>
+            <div class="step__content">
+              <h3 class="step__title">Grupo estruturado</h3>
+              <p class="step__desc">Participe de um grupo planeado contratualmente por 12 meses.</p>
+            </div>
+          </div>
+          <div class="step__divider" aria-hidden="true"></div>
+          <div class="step">
+            <div class="step__icon">
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
+                <line x1="12" y1="18" x2="12.01" y2="18" />
+              </svg>
+            </div>
+            <div class="step__content">
+              <h3 class="step__title">Receba conforme contrato</h3>
+              <p class="step__desc">Entrega garantida seguindo a ordem contratual do grupo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ASPIRATION SECTION (WHITE) -->
+    <section class="section section--white">
+      <div class="container text-center">
+        <div class="aspiration">
+          <h2 class="section-title">Mais do que um telefone.<br>Uma afirmação.</h2>
+          <p class="section-subtitle">Poder. Status. Performance. <br>Conquiste o seu iPhone na Europa de forma
+            estruturada.</p>
+          <div class="product-reveal__visual">
+            <div class="product-reveal__visual-inner" style="transform: rotate(0deg); width: 30%; height: 120%;"></div>
           </div>
         </div>
       </div>
@@ -324,14 +304,13 @@
       </div>
     </section>
 
-    <!-- LIMITED POSITIONS -->
-    <section class="section section--accent" id="reservar">
+    <!-- LEAD FORM (LIGHT) -->
+    <section class="section section--light" id="reservar">
       <div class="container">
-        <div class="limited">
+        <div class="limited text-center">
           <div class="limited__badge">⏳ Vagas limitadas</div>
           <h2 class="limited__title">Posições limitadas disponíveis.</h2>
-          <p class="limited__subtitle">O grupo será aberto somente quando os primeiros <strong>10 participantes
-              qualificados</strong> confirmarem a sua posição. Não perca o seu lugar.</p>
+          <p class="limited__subtitle">O grupo abre com os primeiros 10 participantes qualificados.</p>
 
           <form class="lead-form" id="lead-form">
             <div class="form-grid">
@@ -351,7 +330,7 @@
               </div>
             </div>
             <button type="submit" class="btn btn--teal btn--lg btn--full">RESERVAR A MINHA POSIÇÃO</button>
-            <p class="form-privacy">Sua informação é confidencial e usada apenas para o contactar sobre a WEKOTA.</p>
+            <p class="form-privacy">Informação confidencial. Contacto exclusivo sobre a WEKOTA.</p>
           </form>
 
           <div class="limited__counter">
