style: premium institutional footer redesign

--- a/index.html
+++ b/index.html
@@ -367,20 +367,38 @@
   </main>
 
   <footer class="footer">
-    <div class="container footer__inner">
-      <a href="#" class="logo logo--footer" aria-label="WEKOTA">
-        <svg class="logo__symbol logo__symbol--sm" viewBox="0 0 40 40" aria-hidden="true" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="M20 20 L20 2 A18 18 0 0 0 2 20 Z" fill="#163E63" />
-          <path d="M20 20 L2 20 A18 18 0 0 0 20 38 Z" fill="#163E63" />
-          <path d="M20 20 L20 38 A18 18 0 0 0 38 20 Z" fill="#163E63" />
-          <path d="M20 20 L38 20 A18 18 0 0 0 20 2 Z" fill="#2FB6A6" />
-        </svg>
-        <span class="logo__wordmark">WEKOTA</span>
-      </a>
-      <p class="footer__slogan">Juntos, acessamos.</p>
-      <p class="footer__copy">© 2026 WEKOTA. Todos os direitos reservados. Plataforma europeia de aquisição coletiva
-        estruturada.</p>
+    <div class="container footer__grid">
+      <div class="footer__col">
+        <a href="#" class="logo logo--footer" aria-label="WEKOTA">
+          <svg class="logo__symbol logo__symbol--sm" viewBox="0 0 40 40" aria-hidden="true" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M20 20 L20 2 A18 18 0 0 0 2 20 Z" fill="#FFFFFF" />
+            <path d="M20 20 L2 20 A18 18 0 0 0 20 38 Z" fill="#FFFFFF" />
+            <path d="M20 20 L20 38 A18 18 0 0 0 38 20 Z" fill="#FFFFFF" />
+            <path d="M20 20 L38 20 A18 18 0 0 0 20 2 Z" fill="#2FB6A6" />
+          </svg>
+          <span class="logo__wordmark">WEKOTA</span>
+        </a>
+        <p class="footer__slogan">Together, we access.</p>
+        <p class="footer__desc">European structured collective acquisition platform.</p>
+      </div>
+
+      <div class="footer__col">
+        <h4 class="footer__title">Navigation</h4>
+        <ul class="footer__links">
+          <li><a href="#como-funciona">How it works</a></li>
+          <li><a href="#reservar">Priority List</a></li>
+          <li><a href="mailto:info@wekota.com">Contact</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__col">
+        <h4 class="footer__title">Legal</h4>
+        <p class="footer__legal-text">Registered in the European Union.</p>
+        <p class="footer__legal-text">Operates in Portugal and Spain.</p>
+        <p class="footer__copyright">© 2026 WEKOTA. All rights reserved.</p>
+      </div>
     </div>
   </footer>
 
