style: premium 2-column hero and refined feature icons

--- a/index.html
+++ b/index.html
@@ -49,35 +49,21 @@
     <section class="hero section--white" id="inicio">
       <div class="container hero__inner">
         <div class="hero__content">
-          <div class="hero__badge">🇪🇺 Plataforma Europeia · Grupo Inaugural</div>
           <h1 class="hero__headline">
-            A forma mais inteligente de aceder ao <br /><span class="text-teal">iPhone 17 Pro Max na Europa.</span>
+            The smartest way to access <br /><span class="text-teal">iPhone 17 Pro Max.</span>
           </h1>
           <p class="hero__subheadline">
-            Adira ao primeiro grupo coletivo WEKOTA e garanta o seu iPhone 17 Pro Max 256GB (Laranja) sem burocracia
-            bancária.
+            Join the first WEKOTA collective group and secure your iPhone 17 Pro Max 256GB in its exclusive Orange
+            finish.
+            No banking bureaucracy. Just structure. Premium access for those who value performance.
           </p>
-          <div class="hero__emphasis">
-            Portugal 🇵🇹 | Espanha 🇪🇸<br>
-            Sem banca. Sem juros. Apenas estrutura.
-          </div>
           <div class="hero__actions">
-            <a href="#reservar" class="btn btn--primary btn--lg" id="hero-cta-primary">ENTRAR NA LISTA PRIORITÁRIA</a>
+            <a href="#reservar" class="btn btn--primary btn--lg" id="hero-cta-primary">SECURE YOUR POSITION</a>
           </div>
         </div>
         <div class="hero__visual" aria-hidden="true">
-          <div class="phone-mockup">
-            <div class="phone-mockup__frame">
-              <div class="phone-mockup__notch"></div>
-              <div class="phone-mockup__screen">
-                <div class="phone-mockup__wallpaper"></div>
-              </div>
-              <div class="phone-mockup__camera">
-                <div class="phone-mockup__lens"></div>
-                <div class="phone-mockup__lens"></div>
-                <div class="phone-mockup__lens phone-mockup__lens--lidar"></div>
-              </div>
-            </div>
+          <div class="hero-visual-card">
+            <div class="hero-visual-card__iphone"></div>
           </div>
         </div>
       </div>
@@ -107,72 +93,76 @@
     <section class="section section--navy" id="por-que-wekota">
       <div class="container">
         <div class="section-header">
-          <div class="section-tag">Diferenciais</div>
-          <h2 class="section-title">Feito para quem valoriza a estrutura.</h2>
+          <div class="section-tag">Benefits</div>
+          <h2 class="section-title">Built for those who value structure.</h2>
         </div>
         <div class="why-grid">
           <div class="why-card">
             <div class="why-card__icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
                 <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
                 <circle cx="9" cy="7" r="4" />
                 <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
                 <path d="M16 3.13a4 4 0 0 1 0 7.75" />
               </svg>
             </div>
-            <h3 class="why-card__title">Modelo coletivo estruturado</h3>
-            <p class="why-card__desc">Acesso justo e previsível a tecnologia premium através de um sistema organizado.
-            </p>
+            <h3 class="why-card__title">Structured Collective Model</h3>
+            <p class="why-card__desc">Fair and predictable access to premium technology through an organized system.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
                 <circle cx="12" cy="12" r="10" />
                 <line x1="12" y1="16" x2="12" y2="12" />
                 <line x1="12" y1="8" x2="12.01" y2="8" />
               </svg>
             </div>
-            <h3 class="why-card__title">Custo totalmente transparente</h3>
-            <p class="why-card__desc">Sem taxas escondidas. Cada valor é detalhado no contrato para sua total segurança.
+            <h3 class="why-card__title">Total Cost Transparency</h3>
+            <p class="why-card__desc">No hidden fees. Every value is detailed in the contract for your total security.
             </p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
                 <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
               </svg>
             </div>
-            <h3 class="why-card__title">Garantia Europeia</h3>
-            <p class="why-card__desc">Operamos sob jurisdição europeia com máximo rigor e proteção ao participante.</p>
+            <h3 class="why-card__title">European Guarantee</h3>
+            <p class="why-card__desc">We operate under European jurisdiction with the highest rigor and protection.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
                 <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
                 <path d="M7 11V7a5 5 0 0 1 10 0v4" />
               </svg>
             </div>
-            <h3 class="why-card__title">Sistema de pagamento seguro</h3>
-            <p class="why-card__desc">Processamento de pagamentos através de canais seguros e encriptados para sua total
-              tranquilidade.</p>
+            <h3 class="why-card__title">Secure Payment System</h3>
+            <p class="why-card__desc">Processing through encrypted channels for your complete peace of mind.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#2FB6A6" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
+                <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
               </svg>
             </div>
-            <h3 class="why-card__title">Proteção do dispositivo</h3>
-            <p class="why-card__desc">Contamos com tecnologia de proteção e rastreamento para garantir a integridade do
-              modelo de acesso.</p>
+            <h3 class="why-card__title">Premium Performance</h3>
+            <p class="why-card__desc">The iPhone 17 Pro Max delivers high resale value and elite technology.</p>
           </div>
-          <div class="why-card why-card--accent">
-            <p class="why-card__quote">"Juntos, acessamos o que individualmente seria impossível."</p>
+          <div class="why-card">
+            <div class="why-card__icon">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
+              </svg>
+            </div>
+            <h3 class="why-card__title">Dedicated Support</h3>
+            <p class="why-card__desc">Expert assistance throughout your participation in the WEKOTA group.</p>
           </div>
         </div>
       </div>
