style: product-first repositioning (70% aspiration, 30% structure) in PT

--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
       <div class="container hero__inner">
         <div class="hero__content">
           <h1 class="hero__headline">
-            The smartest way to access <br /><span class="text-teal">iPhone 17 Pro Max.</span>
+            O futuro é <br /><span class="text-teal">Orange.</span>
           </h1>
           <p class="hero__subheadline">
-            Join the first WEKOTA collective group and secure your iPhone 17 Pro Max 256GB in its exclusive Orange
-            finish.
-            No banking bureaucracy. Just structure. Premium access for those who value performance.
+            Garanta o seu iPhone 17 Pro Max 256GB através da primeira plataforma de aquisição coletiva estruturada da
+            Europa. Sem bancos, apenas impacto.
           </p>
           <div class="hero__actions">
-            <a href="#reservar" class="btn btn--primary btn--lg" id="hero-cta-primary">SECURE YOUR POSITION</a>
+            <a href="#reservar" class="btn btn--primary btn--lg" id="hero-cta-primary">RESERVAR MINHA POSIÇÃO</a>
           </div>
         </div>
         <div class="hero__visual" aria-hidden="true">
@@ -69,23 +68,23 @@
       </div>
     </section>
 
+    <!-- PRODUCT IMPACT (FULL WIDTH) -->
+    <section class="section section--white product-impact">
+      <div class="container text-center">
+        <div class="impact-visual">
+          <div class="iphone-impact-mockup"></div>
+        </div>
+        <h2 class="impact-title">iPhone 17 Pro Max</h2>
+        <p class="impact-subtitle">256GB — Orange</p>
+      </div>
+    </section>
+
     <!-- URGENCY BAR (LIGHT) -->
     <section class="urgency-bar">
       <div class="container urgency-bar__inner">
         <div class="urgency-item"><span class="check">✔</span> Primeiro grupo WEKOTA abre em breve</div>
-        <div class="urgency-item"><span class="check">✔</span> Limitado a 10 participantes confirmados</div>
-        <div class="urgency-item"><span class="check">✔</span> Lista prioritária a encher rapidamente</div>
-      </div>
-    </section>
-
-    <!-- LARGE PRODUCT SECTION 1 (WHITE) -->
-    <section class="section section--white product-reveal">
-      <div class="container text-center">
-        <div class="product-reveal__visual">
-          <div class="product-reveal__visual-inner"></div>
-        </div>
-        <h2 class="section-title">iPhone 17 Pro Max 256GB — Orange.</h2>
-        <p class="section-subtitle">O equilíbrio perfeito entre design e performance absoluta.</p>
+        <div class="urgency-item"><span class="check">✔</span> 10 vagas exclusivas por grupo</div>
+        <div class="urgency-item"><span class="check">✔</span> Lista prioritária ativa</div>
       </div>
     </section>
 
@@ -93,76 +92,42 @@
     <section class="section section--navy" id="por-que-wekota">
       <div class="container">
         <div class="section-header">
-          <div class="section-tag">Benefits</div>
-          <h2 class="section-title">Built for those who value structure.</h2>
+          <div class="section-tag">Diferenciais</div>
+          <h2 class="section-title">Estrutura que gera impacto.</h2>
         </div>
         <div class="why-grid">
           <div class="why-card">
             <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
-                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                <circle cx="9" cy="7" r="4" />
-                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
-                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
               </svg>
             </div>
-            <h3 class="why-card__title">Structured Collective Model</h3>
-            <p class="why-card__desc">Fair and predictable access to premium technology through an organized system.</p>
+            <h3 class="why-card__title">Modelo Coletivo</h3>
+            <p class="why-card__desc">Acesso estruturado e previsível através de grupos organizados.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
                 <circle cx="12" cy="12" r="10" />
                 <line x1="12" y1="16" x2="12" y2="12" />
                 <line x1="12" y1="8" x2="12.01" y2="8" />
               </svg>
             </div>
-            <h3 class="why-card__title">Total Cost Transparency</h3>
-            <p class="why-card__desc">No hidden fees. Every value is detailed in the contract for your total security.
-            </p>
+            <h3 class="why-card__title">Transparência Total</h3>
+            <p class="why-card__desc">Sem juros ou taxas ocultas. Tudo detalhado por contrato.</p>
           </div>
           <div class="why-card">
             <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-              </svg>
-            </div>
-            <h3 class="why-card__title">European Guarantee</h3>
-            <p class="why-card__desc">We operate under European jurisdiction with the highest rigor and protection.</p>
-          </div>
-          <div class="why-card">
-            <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
                 <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
                 <path d="M7 11V7a5 5 0 0 1 10 0v4" />
               </svg>
             </div>
-            <h3 class="why-card__title">Secure Payment System</h3>
-            <p class="why-card__desc">Processing through encrypted channels for your complete peace of mind.</p>
-          </div>
-          <div class="why-card">
-            <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round">
-                <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
-              </svg>
-            </div>
-            <h3 class="why-card__title">Premium Performance</h3>
-            <p class="why-card__desc">The iPhone 17 Pro Max delivers high resale value and elite technology.</p>
-          </div>
-          <div class="why-card">
-            <div class="why-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
-              </svg>
-            </div>
-            <h3 class="why-card__title">Dedicated Support</h3>
-            <p class="why-card__desc">Expert assistance throughout your participation in the WEKOTA group.</p>
+            <h3 class="why-card__title">Segurança Europeia</h3>
+            <p class="why-card__desc">Operação sob jurisdição da UE com máximo rigor e proteção.</p>
           </div>
         </div>
       </div>
