--- a/index.html
+++ b/index.html
@@ -58,72 +58,153 @@
       </div>
     </section>
 
-    <!-- 4️⃣ FEATURES SECTION (CLEAN GRID) -->
-    <section class="section-padding">
+    <!-- 4️⃣ FEATURES SECTION (WHY WEKOTA IS TRUSTWORTHY) -->
+    <section class="section-padding bg-light" id="confianca">
       <div class="container">
+        <div class="text-center" style="margin-bottom: 80px;">
+          <div
+            style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
+            Segurança & Robustez</div>
+          <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px;">Por que confiar na WEKOTA?</h2>
+          <p style="font-size: 1.125rem; color: var(--gray); max-width: 700px; margin: 0 auto;">Construímos uma
+            plataforma baseada na transparência absoluta e no rigor contratual europeu.</p>
+        </div>
         <div class="features-grid">
-          <!-- Feature 1 -->
           <div class="feature-card">
             <div class="feature-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                <circle cx="9" cy="7" r="4" />
-                <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
-                <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-              </svg>
-            </div>
-            <h3 class="feature-card__title">Modelo coletivo estruturado</h3>
-            <p class="feature-card__desc">Acesso justo e previsível através de grupos organizados.</p>
-          </div>
-          <!-- Feature 2 -->
-          <div class="feature-card">
-            <div class="feature-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
                 <circle cx="12" cy="12" r="10" />
-                <line x1="12" y1="16" x2="12" y2="12" />
-                <line x1="12" y1="8" x2="12.01" y2="8" />
+                <line x1="2" y1="12" x2="22" y2="12" />
+                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z" />
               </svg>
             </div>
-            <h3 class="feature-card__title">Custo transparente</h3>
-            <p class="feature-card__desc">Sem juros ou taxas ocultas. Tudo detalhado por contrato.</p>
+            <h3 class="feature-card__title">Sede na Europa</h3>
+            <p class="feature-card__desc">Empresa registada e operante sob a jurisdição da União Europeia.</p>
           </div>
-          <!-- Feature 3 -->
           <div class="feature-card">
             <div class="feature-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                <polyline points="14 2 14 8 20 8" />
+                <line x1="16" y1="13" x2="8" y2="13" />
+                <line x1="16" y1="17" x2="8" y2="17" />
+                <polyline points="10 9 9 9 8 9" />
+              </svg>
+            </div>
+            <h3 class="feature-card__title">Contrato Formal</h3>
+            <p class="feature-card__desc">Estrutura jurídica robusta que protege todos os participantes do grupo.</p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-card__icon">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
                 <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
                 <path d="M7 11V7a5 5 0 0 1 10 0v4" />
               </svg>
             </div>
-            <h3 class="feature-card__title">Proteção do dispositivo</h3>
-            <p class="feature-card__desc">Segurança absoluta do dispositivo conforme as regras do grupo.</p>
+            <h3 class="feature-card__title">Custos Transparentes</h3>
+            <p class="feature-card__desc">Modelo sem letras miúdas. Valores fixos e definidos desde o primeiro dia.</p>
           </div>
-          <!-- Feature 4 -->
           <div class="feature-card">
             <div class="feature-card__icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round">
-                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
-                <polyline points="22 4 12 14.01 9 11.01" />
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
               </svg>
             </div>
-            <h3 class="feature-card__title">Sistema de pagamento seguro</h3>
-            <p class="feature-card__desc">Pagamentos processados através de canais europeus seguros.</p>
+            <h3 class="feature-card__title">Proteção do Dispositivo</h3>
+            <p class="feature-card__desc">Tecnologia avançada para garantir a segurança física e lógica da sua
+              aquisição.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- 5️⃣ URGENCY SECTION (HIGH CONTRAST) -->
-    <section class="section-padding bg-navy" id="reservar">
+    <!-- 5️⃣ HOW IT WORKS (STRUCTURED EXPLANATION) -->
+    <section class="section-padding" id="como-funciona">
+      <div class="container">
+        <div class="text-center" style="margin-bottom: 80px;">
+          <div
+            style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
+            O Modelo WEKOTA</div>
+          <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 24px;">Como funciona a nossa estrutura
+          </h2>
+          <p style="font-size: 1.125rem; color: var(--gray); max-width: 800px; margin: 0 auto;">Oferecemos uma
+            alternativa inteligente ao crédito bancário tradicional, focada no acesso coletivo e organizado.</p>
+        </div>
+        <div class="features-grid">
+          <div class="feature-card">
+            <div style="font-size: 0.875rem; font-weight: 700; color: var(--teal); margin-bottom: 12px;">01.</div>
+            <h3 class="feature-card__title">Reserva de Posição</h3>
+            <p class="feature-card__desc">Inscrição na lista prioritária para qualificação no grupo inaugural.</p>
+          </div>
+          <div class="feature-card">
+            <div style="font-size: 0.875rem; font-weight: 700; color: var(--teal); margin-bottom: 12px;">02.</div>
+            <h3 class="feature-card__title">Formalização Contratual</h3>
+            <p class="feature-card__desc">Assinatura de contrato europeu blindado com regras de entrega claras.</p>
+          </div>
+          <div class="feature-card">
+            <div style="font-size: 0.875rem; font-weight: 700; color: var(--teal); margin-bottom: 12px;">03.</div>
+            <h3 class="feature-card__title">Pagamento Sustentável</h3>
+            <p class="feature-card__desc">Mensalidades fixas sem variação de juros ou taxas surpresas.</p>
+          </div>
+          <div class="feature-card">
+            <div style="font-size: 0.875rem; font-weight: 700; color: var(--teal); margin-bottom: 12px;">04.</div>
+            <h3 class="feature-card__title">Entrega Garantida</h3>
+            <p class="feature-card__desc">Receba o seu iPhone seguindo a ordem cronológica do grupo.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 6️⃣ ABOUT WEKOTA & TRANSPARENCY -->
+    <section class="section-padding bg-navy" id="sobre">
+      <div class="container">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: start;">
+          <div>
+            <div
+              style="text-transform: uppercase; letter-spacing: 0.1em; font-weight: 700; color: var(--teal); margin-bottom: 24px;">
+              Sobre Nós</div>
+            <h2 class="hero__headline" style="color: var(--white); font-size: 2.5rem; margin-bottom: 24px;">Quem é a
+              WEKOTA?</h2>
+            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Somos uma plataforma europeia dedicada a
+              democratizar o acesso à tecnologia premium através de modelos de aquisição coletiva de alta performance.
+            </p>
+            <p style="color: rgba(255,255,255,0.8);">Com operações em Portugal e Espanha, a nossa missão é substituir a
+              burocracia bancária por uma estrutura inteligente, confiável e centrada no participante.</p>
+          </div>
+          <div
+            style="background: rgba(255,255,255,0.05); padding: 48px; border-radius: var(--radius-lg); border: 1px solid rgba(255,255,255,0.1);">
+            <h3 style="color: var(--white); margin-bottom: 24px;">Transparência Radical</h3>
+            <ul style="color: rgba(255,255,255,0.8);">
+              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
+                <span style="color: var(--teal);">✔</span> Mensalidades 100% fixas
+              </li>
+              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
+                <span style="color: var(--teal);">✔</span> Valor total definido em contrato
+              </li>
+              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
+                <span style="color: var(--teal);">✔</span> Sem taxas ocultas ou juros variáveis
+              </li>
+              <li style="margin-bottom: 16px; display: flex; align-items: center; gap: 12px;">
+                <span style="color: var(--teal);">✔</span> Processo de comunicação contínuo
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 7️⃣ URGENCY SECTION (REPOSITIONED) -->
+    <section class="section-padding bg-light" id="reservar">
       <div class="container text-center">
-        <h2 class="urgency__headline">Vagas Limitadas</h2>
-        <p class="urgency__text">O grupo abre apenas para os 10 primeiros participantes confirmados.</p>
-        <a href="https://wa.me/351000000000?text=Olá!%20Quero%20reservar%22minha%20posição%20no%20grupo%20WEKOTA."
-          class="btn btn--primary btn--lg">Reservar minha posição</a>
+        <h2 class="urgency__headline" style="color: var(--navy);">Vagas Limitadas</h2>
+        <p class="urgency__text" style="color: var(--gray);">O grupo inaugural abre apenas para os 10 primeiros
+          participantes confirmados.</p>
+        <a href="https://wa.me/351000000000?text=Olá!%20Quero%20reservar%20minha%20posição%20no%20grupo%20WEKOTA."
+          class="btn btn--primary btn--lg">Quero minha posição prioritária</a>
       </div>
     </section>
   </main>
