style: restored urgency/lead form as requested

--- a/index.html
+++ b/index.html
@@ -197,14 +197,39 @@
       </div>
     </section>
 
-    <!-- 7️⃣ URGENCY SECTION (REPOSITIONED) -->
+    <!-- 7️⃣ URGENCY SECTION (RESTORED FORM) -->
     <section class="section-padding bg-light" id="reservar">
       <div class="container text-center">
-        <h2 class="urgency__headline" style="color: var(--navy);">Vagas Limitadas</h2>
-        <p class="urgency__text" style="color: var(--gray);">O grupo inaugural abre apenas para os 10 primeiros
-          participantes confirmados.</p>
-        <a href="https://wa.me/351000000000?text=Olá!%20Quero%20reservar%20minha%20posição%20no%20grupo%20WEKOTA."
-          class="btn btn--primary btn--lg">Quero minha posição prioritária</a>
+        <div
+          style="display: inline-flex; align-items: center; gap: 8px; font-size: 0.875rem; color: var(--gray); font-weight: 600; margin-bottom: 12px; text-transform: uppercase; letter-spacing: 0.05em;">
+          <span>⏳</span> Vagas limitadas
+        </div>
+        <h2 class="hero__headline" style="font-size: 2.5rem; margin-bottom: 16px;">Posições limitadas disponíveis.</h2>
+        <p style="color: var(--gray); margin-bottom: 48px;">O grupo abre com os primeiros 10 participantes qualificados.
+        </p>
+
+        <div class="form-card">
+          <form class="lead-form">
+            <div class="form-grid">
+              <input type="text" placeholder="Nome Completo" required class="form-input">
+              <input type="text" placeholder="WhatsApp (+ Código País)" required class="form-input">
+              <select class="form-input" required>
+                <option value="" disabled selected>País de Residência</option>
+                <option value="Portugal">Portugal</option>
+                <option value="Espanha">Espanha</option>
+                <option value="Outro">Outro</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn--primary btn--full btn--lg" style="margin-top: 24px;">RESERVAR A MINHA
+              POSIÇÃO</button>
+          </form>
+          <p style="font-size: 0.75rem; color: var(--gray); margin-top: 24px; opacity: 0.8;">Informação confidencial.
+            Contacto exclusivo sobre a WEKOTA.</p>
+        </div>
+
+        <div style="margin-top: 32px; font-size: 1rem; color: var(--gray); font-weight: 600;">
+          6 de 10 vagas confirmadas
+        </div>
       </div>
     </section>
   </main>
